--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-svgstore": "^7.0.0",
     "gulp-uglify": "^2.1.0",
     "gulp-util": "^3.0.8",
     "vinyl-ftp": "^0.6.0"
